Save docker file
